# fastapi-example

./: .env.example  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: config.py  main.py
src/api/: repositories.py  routes.py  schemas.py  services.py
src/utils/: pdf_data_comparer.py
tests/: .env.tests  conftest.py
tests/fixtures/: test_database.csv
tests/functional/api/: test_routes.py
tests/unit/: test_config.py  test_main.py
